FindBugs: "Method invokes dubious Boolean constructor; use Boolean.valueOf(...) instead Creating new instances of java.lang.Boolean wastes memory, since Boolean objects are immutable and there are only two useful values of this type. Use the  Boolean.valueOf() method to create Boolean objects instead."